# PortalPutters

./: .gitignore  4cBuildWeb.bat  4cBuildWin.bat  CMakeLists.txt  README.md  build.bat  conanfile.txt  project.4coder  zip_web_build.bat
assets/Data/Levels/: ldtk_grbll_golf.ldtk  level1.json  level3.json  level7.json
assets/Data/Levels/ldtk_grbll_golf/backups/backup_2022-05-29_15-30-41/: ldtk_grbll_golf.ldtk
assets/Data/Levels/ldtk_grbll_golf/backups/backup_2022-05-29_15-48-53/: ldtk_grbll_golf.ldtk
assets/Data/Levels/ldtk_grbll_golf/backups/backup_2022-05-29_15-49-05/: ldtk_grbll_golf.ldtk
assets/Data/Levels/ldtk_grbll_golf/backups/backup_2022-05-29_16-32-32/: ldtk_grbll_golf.ldtk
assets/Data/Saves/: save.json
raylib/: README.txt
raylib/npp/: config.xml  session.xml
raylib/npp/autoCompletion/: c.xml
raylib/npp/plugins/Config/: NppExec.ini
raylib/npp/themes/: Obsidian.xml
raylib/raylib/src/extras/: raygui.h
raylib/w64devkit/: Dockerfile
raylib/w64devkit/i686-w64-mingw32/lib/ldscripts/: i386pe.x  i386pe.xa  i386pe.xbn  i386pe.xe  i386pe.xn  i386pe.xr  i386pe.xu
raylib/w64devkit/src/: alias.c  w64devkit.c
src/: Core.h  UnityBuild.cpp  main.cpp
src/Engine/: AssetManager.hpp  LevelEditorHandler.hpp  LevelsScreenHandler.hpp  MainGameHandler.cpp  MainGameHandler.hpp  MainMenuHandler.cpp  MainMenuHandler.hpp  Window.hpp
src/Game/: Ball.hpp  Coin.hpp  Entity.hpp  GolfLevel.hpp  Hole.hpp  PhysicsBox.hpp  Portal.hpp  Wall.hpp  WorldText.hpp
src/Util/: RayUtil.hpp  Timer.hpp
web_build/: EmscriptenBuild.bat  game.data  game.js  game.wasm  index.html  styles.css
web_build/assets/Data/: config.json
web_build/assets/Data/Levels/: ldtk_grbll_golf.ldtk  level2.json  level4.json  level6.json
web_build/assets/Data/Saves/: ave_test.sav  save.json  save_test.sav
(+15 files in other folders)
